# ai-cicd-github

./: .gitignore  README.md  app.py  dangerous.py  dangerous2.py  more_utils.py  pyproject.toml  requirements.txt  stale_code_report.md  test_mods.py
.github/workflows/: ci.yml  pr-review.yml  pr_review.yml  stale-code.yml  test-gen.yml
scripts/: ai_review.py  check_coverage.py  find_stale.py  generate_tests.py  sample_diff.txt
tests/: test_app.py  test_generated.py
